# piscinePython

./: init_python.sh
day00/ex00/: answers.txt  requirements.txt
day00/ex01/: exec.py
day00/ex02/: whois.py
day00/ex03/: count.py
day00/ex04/: operations.py
day00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
day00/ex06/: .recipe.py.swp  recipe.py
day00/ex07/: filterwords.py
day00/ex08/: sos.py
day00/ex09/: guess.py
day00/ex10/: .loading.py.swp  loading.py  test.py
day01/ex00/: .book.py.swp  book.py  recipe.py  test.py
day01/ex01/: .game.py.swp  game.py
day01/ex02/: .vector.py.swp  test.py  vector.py
day01/ex03/: generator.py  test.py
day01/ex04/: eval.py
day01/ex05/: test.py  the_bank.py
day02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
day02/ex01/: main.py
day02/ex02/: logger.py
day02/ex03/: csvreader.py
day02/ex04/: README.md  build.sh  setup.cfg  setup.py
day02/ex04/src/my_minipack/: logger.py  progressbar.py
day03/ex00/: NumPyCreator.py  ft_map.py
day03/ex01/: ImageProcessor.py
day03/ex02/: ScrapBooker.py
day03/ex03/: .ColorFilter.py.swp  ColorFilter.py  ImageProcessor.py
day03/ex04/: .Kmeans.py.swp  :w  Kmeans.py  csvreader.py
day04/ex00/: FileLoader.py  YoungestFellah.py  main.py
day04/ex01/: .athele_events.csv.swp  FileLoader.py  YoungestFellah.py  main.py
day04/ex02/: PropotionBySport.py
day04/ex03/: HowManyMedals.py
day04/ex04/: .SpatioTemporalData.py.swp  SpatioTemporalData.py
day04/ex05/: .HowManyMedalsByCountry.py.swp  HowManyMedalsByCountry.py
day04/ex06/: .MyPlotlib.py.swp  (+1 more)
(+2 files in other folders)
