[metadata]
name = my_minipack
version = 1.0.0
summary = How to create a package in python
home-page = none
author = Adrien
author-email = adconsta@student.42.fr
license = GPLv3
location = $PWD
requires = none
required-by = none
metadata-Version = 2.1
installer = pip
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education 
    Topic :: HowTo
    Topic :: Package 
    Licence :: OSI Aproved :: GNU General Public Licence v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
